--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-help
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Top Gun Laparoscopic Surgeon Club — Cornell</title>
+  <meta name="description" content="Cornell Top Gun Laparoscopic Surgeon Club — skills, workshops, and community for aspiring minimally invasive surgeons." />
+  <link rel="stylesheet" href="css/styles.css" />
+</head>
+<body>
+  <header class="site-header">
+    <div class="container header-inner">
+      <a class="logo" href="index.html">Top Gun Laparoscopic Club</a>
+      <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">☰</button>
+      <nav id="main-nav" class="nav">
+        <ul>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="about.html">About / Team</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section class="hero">
+      <div class="container">
+        <h1>Sharpen technique. Operate with confidence.</h1>
+        <p class="lead">Hands-on laparoscopic training, simulation sessions, guest lectures, and a community for Cornell students interested in minimally invasive surgery.</p>
+        <p class="cta-row">
+          <a class="btn" href="about.html">Learn About Us</a>
+          <a class="btn ghost" href="contact.html">Join / Contact</a>
+        </p>
+      </div>
+    </section>
+
+    <section class="container features">
+      <article class="feature">
+        <h2>Simulation Workshops</h2>
+        <p>Monthly skills labs with box trainers, camera handling, suturing, and troubleshooting techniques.</p>
+      </article>
+
+      <article class="feature">
+        <h2>Mentorship & Talks</h2>
+        <p>Regular talks from residents, faculty, and alumni. Mentorship for research and clinical interests.</p>
+      </article>
+
+      <article class="feature">
+        <h2>Competitions & Outreach</h2>
+        <p>Friendly intra-club competitions and outreach workshops for local high school students.</p>
+      </article>
+    </section>
+
+    <section class="container quick-info">
+      <h3>Upcoming: Endoscopy + Laparoscopy Workshop</h3>
+      <p><stron
